--- a/requirements.txt
+++ b/requirements.txt
@@ -6,4 +6,5 @@ django-imagekit==2.0.2
 ## FIXME: could not find svn URL in dependency_links for this package:
 flup==1.0.3.dev-20110405
 lxml==3.1beta1
+openpyxl==1.6.1
 wsgiref==0.1.2
